--- a/www/public/index.html
+++ b/www/public/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Vue.js2.0仿微信应用</title>
+    <title>微信聊天记录</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
